Remove bundle dependencies from Composer file

--- a/composer.json
+++ b/composer.json
@@ -14,56 +14,18 @@
 	],
 	"config": {
 		"platform": {
-			"php": "5.3.29"
+			"php": "5.4"
 		},
 		"sort-packages": true
 	},
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"require": {
-		"php": ">=5.3.29",
-		"composer/composer": "^1.2.0",
-		"composer/semver": "~1.0",
-		"justinrainbow/json-schema": "~5.2.5",
+		"php": ">=5.4",
 		"mustache/mustache": "~2.4",
 		"ramsey/array_column": "~1.1",
 		"rmccue/requests": "~1.6",
-		"symfony/config": "^2.7|^3.0",
-		"symfony/console": "^2.7|^3.0",
-		"symfony/debug": "^2.7|^3.0",
-		"symfony/dependency-injection": "^2.7|^3.0",
-		"symfony/event-dispatcher": "^2.7|^3.0",
-		"symfony/filesystem": "^2.7|^3.0",
-		"symfony/finder": "^2.7|^3.0",
-		"symfony/process": "^2.1|^3.0",
-		"symfony/translation": "^2.7|^3.0",
-		"symfony/yaml": "^2.7|^3.0",
-		"wp-cli/autoload-splitter": "^0.1.5",
-		"wp-cli/cache-command": "^1.0",
-		"wp-cli/checksum-command": "^1.0",
-		"wp-cli/config-command": "^1.0",
-		"wp-cli/core-command": "^1.0",
-		"wp-cli/cron-command": "^1.0",
-		"wp-cli/db-command": "^1.0",
-		"wp-cli/embed-command": "^1.0",
-		"wp-cli/entity-command": "^1.0",
-		"wp-cli/eval-command": "^1.0",
-		"wp-cli/export-command": "^1.0",
-		"wp-cli/extension-command": "^1.0",
-		"wp-cli/import-command": "^1.0",
-		"wp-cli/language-command": "^1.0",
-		"wp-cli/media-command": "^1.0",
-		"wp-cli/mustangostang-spyc": "^0.6.3",
-		"wp-cli/package-command": "^1.0",
-		"wp-cli/php-cli-tools": "~0.11.2",
-		"wp-cli/rewrite-command": "^1.0",
-		"wp-cli/role-command": "^1.0",
-		"wp-cli/scaffold-command": "^1.0",
-		"wp-cli/search-replace-command": "^1.0",
-		"wp-cli/server-command": "^1.0",
-		"wp-cli/shell-command": "^1.0",
-		"wp-cli/super-admin-command": "^1.0",
-		"wp-cli/widget-command": "^1.0"
+		"wp-cli/php-cli-tools": "~0.11.2"
 	},
 	"require-dev": {
 		"behat/behat": "2.5.*",
@@ -88,12 +50,6 @@
 	"extra": {
 		"branch-alias": {
 			"dev-master": "1.5.x-dev"
-		},
-		"autoload-splitter": {
-			"splitter-logic": "WP_CLI\\AutoloadSplitter",
-			"splitter-location": "php/WP_CLI/AutoloadSplitter.php",
-			"split-target-prefix-true": "autoload_commands",
-			"split-target-prefix-false": "autoload_framework"
 		}
 	}
 }
