--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
 	},
 	"require-dev": {
 		"behat/behat": "2.5.*",
+		"wp-cli/core-command": "^1.0",
+        "wp-cli/package-command": "^1.0",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.4.3",
 		"phpunit/phpunit": "3.7.*",
 		"roave/security-advisories": "dev-master",
