Add additional dev depdendencies needed for tests

--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,15 @@
 		"roave/security-advisories": "dev-master",
         "symfony/finder": ">2.7",
 		"wimg/php-compatibility": "^8.0",
+		"wp-cli/cache-command": "^1.0",
 		"wp-cli/config-command": "^1.0",
 		"wp-cli/core-command": "^1.0",
+		"wp-cli/db-command": "^1.3",
 		"wp-cli/entity-command": "^1.2",
+		"wp-cli/eval-command": "^1.0",
 		"wp-cli/extension-command": "^1.1",
 		"wp-cli/package-command": "^1.0",
+		"wp-cli/server-command": "^1.0",
 		"wp-coding-standards/wpcs": "^0.13.1"
 	},
 	"autoload": {
