--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
 		"wp-cli/eval-command": "^1.0",
 		"wp-cli/extension-command": "^1.1",
 		"wp-cli/package-command": "^1.0",
+		"wp-cli/search-replace-command": "^1.3",
 		"wp-cli/server-command": "^1.0",
 		"wp-coding-standards/wpcs": "^0.13.1"
 	},
