--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
 		"wp-cli/entity-command": "^1.2",
 		"wp-cli/eval-command": "^1.0",
 		"wp-cli/extension-command": "^1.1",
+		"wp-cli/language-command": "^1.0",
 		"wp-cli/package-command": "^1.0",
 		"wp-cli/search-replace-command": "^1.3",
 		"wp-cli/server-command": "^1.0",
