--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,11 @@
 		"wp-cli/entity-command": "^1.2",
 		"wp-cli/eval-command": "^1.0",
 		"wp-cli/extension-command": "^1.1",
+		"wp-cli/import-command": "^1.0",
 		"wp-cli/language-command": "^1.0",
 		"wp-cli/package-command": "^1.0",
+		"wp-cli/rewrite-command": "^1.0",
+		"wp-cli/role-command": "^1.1",
 		"wp-cli/search-replace-command": "^1.3",
 		"wp-cli/server-command": "^1.0",
 		"wp-coding-standards/wpcs": "^0.13.1"
