--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
 		"wp-cli/package-command": "^1.0",
 		"wp-cli/rewrite-command": "^1.0",
 		"wp-cli/role-command": "^1.1",
+		"wp-cli/scaffold-command": "^1.1",
 		"wp-cli/search-replace-command": "^1.3",
 		"wp-cli/server-command": "^1.0",
 		"wp-coding-standards/wpcs": "^0.13.1"
