Adapt travis config

--- a/composer.json
+++ b/composer.json
@@ -73,5 +73,10 @@
             "@phpunit",
             "@behat"
         ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     }
 }
