--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -19,7 +19,7 @@
 	<exclude-pattern>*/utils/*</exclude-pattern>
 	<exclude-pattern>*/vendor/*</exclude-pattern>
 
-	<rule ref="PHPCompatibility">
+	<rule ref="PHPCompatibilityWP">
 		<!-- Polyfill package is used so array_column() is available for PHP 5.4- -->
 		<exclude name="PHPCompatibility.PHP.NewFunctions.array_columnFound"/>
 		<!-- Both magic quotes directives set in wp-settings-cli.php to provide consistent starting point. -->
