--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "wp-cli/wp-cli",
     "description": "WP-CLI framework",
+    "version": "2.0.0",
     "keywords": [
         "cli",
         "wordpress"
