--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "bin/wp"
     ],
     "config": {
+        "platform": {
+            "php": "5.4"
+        },
         "process-timeout": 7200,
         "sort-packages": true
     },
