--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,21 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4",
+        "composer/composer": "^1.7.1",
         "mustache/mustache": "~2.4",
         "ramsey/array_column": "~1.1",
         "rmccue/requests": "~1.6",
         "symfony/finder": ">2.7",
         "wp-cli/mustangostang-spyc": "^0.6.3",
-        "wp-cli/php-cli-tools": "~0.11.2"
+        "wp-cli/php-cli-tools": "~0.11.2",
+        "wp-cli/wp-cli-tests": "^2.0.7"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
         "wp-cli/db-command": "^1.3",
         "wp-cli/entity-command": "^1.2",
         "wp-cli/extension-command": "^1.1",
-        "wp-cli/package-command": "^1.0",
-        "wp-cli/wp-cli-tests": "^0"
+        "wp-cli/package-command": "^1.0"
     },
     "config": {
         "platform": {
@@ -52,6 +53,7 @@
             "./utils/git-setup-pre-commit-hook"
         ],
         "behat": "run-behat-tests",
+        "behat-rerun": "rerun-behat-tests",
         "lint": "run-linter-tests",
         "phpcs": "run-phpcs-tests",
         "phpunit": "run-php-unit-tests",
