--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "wp-cli/package-command": "^1 || ^2",
         "wp-cli/wp-cli-tests": "^2.0.8"
     },
+    "suggest": {
+        "ext-zip": "Needed to support extraction of ZIP archives when doing downloads or updates"
+    },
     "config": {
         "platform": {
             "php": "5.4"
