.gitignore: ignore correct phpcs/phpunit config files
* Remove refs which shouldn't be in this file.
    - The `phpunit.xml.dist` file shouldn't be ignored.
    - The two directory entries look like personal ones which shouldn't have gotten into the `.gitignore` file in the first place, but should have been put into someone's personal `.git/info/exclude` file.
* Add files which allow devs to overwrite config files for PHPUnit and PHPCS
    - The `.dist` files should be committed. However, for their personal use, devs can overrule those files with versions without `.dist`.
        Those personal versions should never be committed.

As a side-note: for PHPCS, having a personal version while still using the original `.dist` file is made very easy, as you can just import the `.dist` file as a starting point, like so:
```xml
<?xml version="1.0"?>
<ruleset name="WP-CLI">
    <rule ref="./phpcs.xml.dist"/>
</ruleset>
```

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ PHAR_BUILD_VERSION
 /packages
 /vendor
 /*.phar
-/phpunit.xml.dist
-/codesniffer
-/PHP_Codesniffer-VariableAnalysis
 .*.swp
 *.log
+phpunit.xml
+phpcs.xml
+.phpcs.xml
