--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "homepage": "https://wp-cli.org",
     "license": "MIT",
     "require": {
-        "php": ">=5.4",
+        "php": "^5.4 || ^7.0",
         "ext-curl": "*",
         "mustache/mustache": "~2.4",
         "rmccue/requests": "~1.6",
