--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -14,6 +14,10 @@ jobs:
         uses: andstor/file-existence-action@v1
         with:
           files: "composer.json"
+      - name: Set up PHP envirnoment
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
       - name: Get Composer cache Directory
         if: steps.check_composer_file.outputs.files_exists == 'true'
         id: composer-cache
@@ -50,6 +54,10 @@ jobs:
         uses: andstor/file-existence-action@v1
         with:
           files: "composer.json, phpcs.xml.dist"
+      - name: Set up PHP envirnoment
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
       - name: Get Composer cache Directory
         if: steps.check_files.outputs.files_exists == 'true'
         id: composer-cache
