--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -18,6 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
+          tools: cs2pr
       - name: Get Composer cache Directory
         if: steps.check_composer_file.outputs.files_exists == 'true'
         id: composer-cache
@@ -58,6 +59,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
+          tools: cs2pr
       - name: Get Composer cache Directory
         if: steps.check_files.outputs.files_exists == 'true'
         id: composer-cache
