--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,7 +5,7 @@ on: pull_request
 jobs:
 
   unit: #-----------------------------------------------------------------------
-    name: Run unit tests on PHP ${{ matrix.php-versions }}
+    name: Unit - PHP ${{ matrix.php-versions }}
     strategy:
       matrix:
         php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
@@ -22,6 +22,7 @@ jobs:
           files: "composer.json, phpunit.xml.dist"
 
       - name: Set up PHP environment
+        if: steps.check_files.outputs.files_exists == 'true'
         uses: shivammathur/setup-php@v2
         with:
           php-version: '${{ matrix.php-versions }}'
@@ -47,10 +48,11 @@ jobs:
         run: COMPOSER_ROOT_VERSION=dev-master composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run PHPUnit
+        if: steps.check_files.outputs.files_exists == 'true'
         run: composer phpunit
 
   functional: #----------------------------------------------------------------------
-    name: Run functional tests on PHP ${{ matrix.php-versions }}
+    name: Functional - PHP ${{ matrix.php-versions }}
     strategy:
       matrix:
         php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
@@ -103,9 +105,11 @@ jobs:
         run: COMPOSER_ROOT_VERSION=dev-master composer install --prefer-dist --no-progress --no-suggest
 
       - name: Start MySQL server
+        if: steps.check_files.outputs.files_exists == 'true'
         run: sudo service mysql start
 
       - name: Prepare test database
+        if: steps.check_files.outputs.files_exists == 'true'
         run: |
           export MYQSL_HOST=127.0.0.1
           export MYSQL_TCP_PORT=${{ job.services.mysql.ports['3306'] }}
@@ -114,4 +118,5 @@ jobs:
           mysql -e 'GRANT ALL PRIVILEGES ON wp_cli_test_scaffold.* TO "wp_cli_test"@"127.0.0.1" IDENTIFIED BY "password1"' -uroot -proot
 
       - name: Run Behat
+        if: steps.check_files.outputs.files_exists == 'true'
         run: composer behat
