--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -83,6 +83,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '${{ matrix.php-versions }}'
+          extensions: mysql
           coverage: none
 
       - name: Get Composer cache Directory
