Update Composer lock file - 2020-06-10

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     },
     "autoload": {
         "psr-0": {
-            "WP_CLI//": "php/"
+            "WP_CLI\\": "php/"
         },
         "classmap": [
             "php/class-wp-cli.php",
