--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "homepage": "https://wp-cli.org",
     "license": "MIT",
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^5.6 || ^7.0 || ^8.0",
         "ext-curl": "*",
         "mustache/mustache": "~2.13",
         "rmccue/requests": "~1.6",
