--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -61,7 +61,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
         wp: ['latest']
         allowed-to-fail: [false]
         include:
